--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
+  - file: "README.md"}
   - {file: "index.html"}
   - {file: "README.md"}
 
