--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html"}
-  - {file: "README.md"}
+  - {title: "AboutMe", file: "README.md"}
   - {title: "Blog", file: "blog.md"}
+  - {file: "index.html"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:sha2nk.singh@gmail.com"}
