--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.html"}
-  - {title: "AboutMe", file: "README.md"}
+  - {file: "README.md"}
   - {title: "Blog", file: "blog.md"}
   
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
