--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Homepage of Shashank Singh"
+title: "Shashank Singh"
 author: "Shashank Singh"
 description: "IISER <b style=\"color: #f45;\"> Bhopal </b>"
 permalink: /:title/
