--- a/_config.yml
+++ b/_config.yml
@@ -5,19 +5,31 @@ permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
 date_format: "%B %d, %Y"
+paginate: 5
+paginate_path: /page/:nun/
 
 # Layout
 
 show_excerpts: true        # show article excerpts on the home page
 show_frame: false          # adds a grey frame to the site
 show_sidebar: false        # show a sidebar instead of the usual header
+show_title: true           # always show the side title
+
+
+# styling
+dark_header: true
 minimal: false             # use a dark header
+
 
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.md"}
+  - {file: "index.md", icon: home}
+  - {file: "projects.md", icon: clipboard}
+  - {file: "archive.html", icon: archive}
+  - {file: "about.md", icon: address-card}
   - {file: "README.md", title: "About me"}
+  - {file: "search.md", icon: search}
   - {file: "blog.md"}
   
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
@@ -31,3 +43,6 @@ comments:
 
 plugins:
  - jekyll-feed
+ - jekyll-paginate
+ - jekyll-sitemap
+ 
