--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,8 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", icon: home}
   - {file: "projects.md", icon: clipboard}
-  - {file: "archive.html", icon: archive}
-  - {file: "about.md", icon: address-card}
-  - {file: "README.md", title: "About me"}
+  - {file: "archive.html", icon: archive, title: "Archive"}
+  - {file: "README.md", title: "About me", icon: address-card}
   - {file: "search.md", icon: search}
   - {file: "blog.md"}
   
