--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,9 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "projects.md", icon: clipboard}
   - {file: "archive.html", icon: archive, title: "Archive"}
   - {file: "README.md", title: "About me", icon: address-card}
+  - {file: "blog.md", title: "Blog"}
   - {file: "search.md", icon: search}
-  - {file: "blog.md"}
+  
   
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:sha2nk.singh@gmail.com"}
