--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", icon: home}
-  - {file: "projects.md", icon: clipboard}
+  - {file: "projects.md", icon: clipboard, title: "Projects"}
   - {file: "archive.html", icon: archive, title: "Archive"}
   - {file: "README.md", title: "About me", icon: address-card}
   - {file: "blog.md", title: "Blog"}
-  - {file: "search.md", icon: search}
+  - {file: "search.md", icon: search, title: "Search"}
   
   
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
