--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,13 @@ paginate_path: /page/:nun/
 # Layout
 
 show_excerpts: true        # show article excerpts on the home page
-show_frame: true          # adds a grey frame to the site
-show_sidebar: true        # show a sidebar instead of the usual header
+show_frame: false          # adds a grey frame to the site
+show_sidebar: false        # show a sidebar instead of the usual header
 show_title: true           # always show the side title
 
 
 # styling
-dark_header: true
+dark_header: false         # header
 minimal: false             # use a dark header
 
 
