--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ paginate_path: /page/:nun/
 show_excerpts: true        # show article excerpts on the home page
 show_frame: false          # adds a grey frame to the site
 show_sidebar: false        # show a sidebar instead of the usual header
-show_title: true           # always show the side title
+show_title: false           # always show the side title
 
 
 # styling
